--- a/NEURODASH/views/entrenamiento/entrenamiento.html
+++ b/NEURODASH/views/entrenamiento/entrenamiento.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
 
   </head>
-<body class="backgound-uno" style="overflow: hidden;">
+<body class="backgound-uno" style="height: 100vh;">
   <div class="container-fluid estilo">
     <div class="row">
       <div class="col-6 d-flex justify-content-start">
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
-        <div class="card Difi max-w-100 p-2" style="background-color: #8080ff7c; border-radius: 15px; width:600px;">
+        <div class="card difi max-w-100 p-2" style="background-color: #8080ff7c; border-radius: 15px; width:600px;">
           <!-- generado por la db -->
         </div>
       </div>
