--- a/NEURODASH/views/entrenamiento/ronda1-entrenamiento.html
+++ b/NEURODASH/views/entrenamiento/ronda1-entrenamiento.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="backgound-cuatro"> 
-    <div class="container-fluid">
-        <div class="row d-flex justify-content-center align-items-center vh-100">
-            <div class="col-md-6 d-flex justify-content-center align-items-center flex-column vh-100">
+<body class="backgound-cuatro" style="height: 100vh;"> 
+    <div class="container-fluid" style="height: 100%;">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-md-6 col-12 d-flex justify-content-center align-items-center flex-column">
                 <div class="glitch" data-text="A memorizar...">A memorizar...</div>
                 
                   
@@ -28,72 +28,67 @@
                 </div>
             </div>
                 
-            <div class="col-md-6 d-flex justify-content-center align-items-center flex-column vh-100">                
+            <div class="col-md-6 col-12 d-flex justify-content-center align-items-center flex-column">                
                 <img src="../../assets/img/iconos-principales/dash.png" alt="logo" class="Numeros">
-                <div class="card secuenciaTer" style="width: 530px; background-color:  #4287f500; border-radius: 15px;">
+                <div class="secuenciaTer">
                     <div class="row">
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">CDXLIV</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">DCCCXC </div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MCMXCIX</div>                                   
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 d-flex justify-content-center">
+                
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MMMDCCCLXXXVIII </div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">CMXXXIX</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">CDXLV</div>                                   
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 d-flex justify-content-center">
+                    
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MMMDCCCLXXX</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MCDXLVI</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">DCCCXXXVII</div>                                   
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 d-flex justify-content-center">
+                    
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MCMXXXVII </div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MMDCCCXXI </div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="ccol-12 d-flex justify-content-center">
                             <div class="recuadros-items">MMDCCCXLV</div>                                   
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 d-flex justify-content-center">
+                    
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MCMXLV</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MMMCMXCIII</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">MMDCCCLXXVII</div>                                   
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 d-flex justify-content-center">
+                    
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">XCV</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">CLXXXVIII</div>                                   
                         </div>
-                        <div class="col-4 d-flex justify-content-center">
+                        <div class="col-12 d-flex justify-content-center">
                             <div class="recuadros-items">CDL</div>                                   
                         </div>
                     </div>
