--- a/NEURODASH/views/juego/podio.html
+++ b/NEURODASH/views/juego/podio.html
@@ -4,46 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEURODASH</title>
-    <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon">
+    <link rel="stylesheet" href="../../assets/img/iconos-principales/rayo_nuzit.icon">
 
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="backgound-cinco">
-    <div class="container-fluid">
+<body class="backgound-cinco d-flex align-items-center justify-content-center" style="height: 100vh;">
+    <div class="container-fluid h-100 d-flex flex-column justify-content-center" style="height: 100%;">
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
-              <img src="../assets/img/iconos-desarrollo/Ellipse 55.png" alt="logo" class="logito-podio">
+              <img src="../../assets/img/iconos-desarrollo/Ellipse 55.png" alt="logo" class="logito-podio">
             </div>
         </div>
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
                 <div class="card podio p-2" style="background-color: transparent; border-radius: 15px;">
-                    <div class="col-12 text-center">
-                        <span class="letter" data-letter="R">R</span>
-                        <span class="letter" data-letter="A">A</span>
-                        <span class="letter" data-letter="N">N</span>
-                        <span class="letter" data-letter="K">K</span>
-                        <span class="letter" data-letter="I">I</span>
-                        <span class="letter" data-letter="N">N</span>
-                        <span class="letter" data-letter="G">G</span>
-                        <span class="espacio-letter"></span>
-                        <span class="letter" data-letter="D">D</span>
-                        <span class="letter" data-letter="E">E</span>
-                        <span class="espacio-letter"></span>
-                        <span class="letter" data-letter="G">G</span>
-                        <span class="letter" data-letter="A">A</span>
-                        <span class="letter" data-letter="N">N</span>
-                        <span class="letter" data-letter="A">A</span>
-                        <span class="letter" data-letter="D">D</span>
-                        <span class="letter" data-letter="O">O</span>
-                        <span class="letter" data-letter="R">R</span>
-                        <span class="letter" data-letter="E">E</span>
-                        <span class="letter" data-letter="S">S</span>
-                    
+                    <div class="col-12 text-center mb-2">
+                        <span class="letter textOcul1">RANKING DE GANADORES</span>
+                        <span class="letter textOcul2">RANKING</span>
+
                     </div>
+
                     <div class="col-12 d-flex justify-content-center">
-                        <table class="tablePodio">
+                        <table class="tablePodio table-responsive">
                             <thead>
                                 <tr class="text-center">
                                     <th scope="col">PUESTO</th>
@@ -52,91 +35,95 @@
                                 </tr>
                             </thead>
                             <tbody class="table-group-divider">
-                                <tr>
+                                <tr>     
                                     <th scope="row">
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         1
                                     </th>
                                     <td>
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         Mark
                                     </td>
                                     <td>
+                                        <img src="../../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2000
-                                        <img src="../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-left: 5px;">
                                     </td>
                                 </tr>
                             
                                 <tr class="table-group-divider">
                                     <th scope="row">
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2
                                     </th>
                                     <td>
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         Mark
                                     </td>
-                                    <td>
+                                    <td> 
+                                        <img src="../../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2000
-                                        <img src="../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-left: 5px;">
                                     </td>
                                 </tr>
                             
                                 <tr class="table-group-divider">
                                     <th scope="row">
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         3
                                     </th>
                                     <td>
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         Mark
                                     </td>
                                     <td>
+                                        <img src="../../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2000
-                                        <img src="../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-left: 5px;">
+
                                     </td>
                                 </tr>
                             
                                 <tr class="table-group-divider">
                                     <th scope="row">
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         4
                                     </th>
                                     <td>
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         Mark
                                     </td>
                                     <td>
+                                        <img src="../../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2000
-                                        <img src="../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-left: 5px;">
+
                                     </td>
                                 </tr>
                                 <tr class="table-group-divider">
                                     <th scope="row">
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         5
                                     </th>
                                     <td>
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         Mark
                                     </td>
                                     <td>
+                                        <img src="../../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2000
-                                        <img src="../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-left: 5px;">
+
                                     </td>
                                 </tr>
                                 <tr class="table-group-divider">
                                     <th scope="row">
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         6
                                     </th>
                                     <td>
-                                        <img src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-right: 5px;">
+                                        <img src="../../assets/img/iconos-desarrollo/Icono-podio.png" alt="Imagen de Mark" class="imgPodioLg">
                                         Mark
                                     </td>
                                     <td>
+                                        <img src="../../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" class="imgPodioLg">
                                         2000
-                                        <img src="../assets/img/iconos/cerebritos.png" alt="Imagen de Mark" style="width: 80px; height: 70px; margin-left: 5px;">
+
                                     </td>
                                 </tr>
                             
@@ -144,18 +131,12 @@
                             </tbody>
                         </table>
                     </div>
-                    
-                               
-                
+                            
                 </div>
             </div>
         </div>
     </div> 
 
-
-
-
-
-    <script src="../lib/bootstrap/js/bootstrap.js"></script> 
+    <script src="../../lib/bootstrap/js/bootstrap.js"></script> 
 </body>
 </html>
