--- a/NEURODASH/assets/css/pages/entrenamiento.css
+++ b/NEURODASH/assets/css/pages/entrenamiento.css
@@ -3,9 +3,10 @@
 .difi{
   padding: 10px;
   border: none;
-  border-radius: 0;
   font-family: "Oswald", sans-serif;
   box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
+    box-sizing: border-box;
+    box-shadow: 0 0 10px 8px #0a0a0a;
 }
 
 .logito-entrenamiento{
@@ -42,8 +43,8 @@
     
 /* tematica entrenamiento */
 .logitoCerebro{
-  width: 30%;
-  max-width: 200px;
+  width: 20%;
+  /* max-width: 200px; */
   filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.911));
   position: relative;
   top: -20px;
@@ -77,6 +78,7 @@
 }
 
 /* paralelogramo categoria */
+.paralelogramoNum,
 .paralelogramoTer,
 .paralelogramo {
   /* background: #bdc3c7; */
@@ -99,6 +101,7 @@
  
 }
 
+.paralelogramoNum,
 .paralelogramoTer {
     outline: 3px solid #000000;
     background-color:#f5e024;
@@ -110,6 +113,7 @@
 }
 
 /* tematica de terminos*/ 
+  .cerebroNum,
   .cerebroTerm{
     width: 60%;
     filter:drop-shadow(0 0 10px rgba(0, 0, 0, 0.911));
@@ -158,7 +162,7 @@
 /* tutoriales*/
 
 .cerebro-leyendo{
-  width: 90% !important;
+  width: 90%;
   max-height: 350px;
   margin-top: 250px;
   animation: flotador 2s ease-out infinite;
@@ -189,6 +193,9 @@
   width: 100%;  
   background-color: #131314a6; 
   border-radius: 15px;
+  width: 80%; 
+  background-color: #032738;
+
 }
 
 /* rondas  */
@@ -212,8 +219,9 @@
 }
 
 .clock-container2{
-  width: 200px;
-  height: 150px;
+  width: 180px;
+  height: 110px;
+  margin-top: 80px;
 }
 
 .clock-circle2,
@@ -231,8 +239,8 @@
 }
 
 .clock-circle2{
-  width: 200px;
-  height: 150px;
+  width: 180px;
+  height: 130px;
 }
 
 .clock-image {
@@ -244,7 +252,6 @@
 
 .digital-clock2,
 .digital-clock {
-  font-size: 2rem;
   color: white;
   background-color: #2a2a2a;
   border-radius: 10px;
@@ -254,13 +261,16 @@
 .digital-clock{
   margin-top: 120px;
   padding: 10px 20px;
+  font-size: 2rem;
 
 }
 
 .digital-clock2{
-  margin-top: 70px;
+  margin-top: 55px;
   padding-left: 2px;
   padding-right: 2px;
+  font-size: 1.5rem;
+
 
 }
 
@@ -350,25 +360,45 @@
   margin-bottom: 5px;
 }
 
+.secuenciaTer2,
 .secuenciaTer {   
   padding-left: 8px;
   padding-right: 8px;
   margin: 0; 
   border: none;
-  border-radius: 0;
   letter-spacing: 0.05rem;
   box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
-  /* outline: 3px solid #000000; */
   box-sizing: border-box;
-  box-shadow: 0 0 10px 8px #0a0a0a
+  box-shadow: 0 0 10px 8px #0a0a0a;
+  width: 75%; 
+  background-color:  #4287f500; 
+  border-radius: 15px;
+  overflow-y: auto;
+  overflow-x: hidden;
   }
+
+  
+  .secuenciaTer {   
+    max-height: 400px;
+    }
+
+  .secuenciaTer2 { 
+    margin-top: 10px;  
+    max-height: 340px;
+    }
+  
+
+
+
+
 
    .podio {   
     border: none;
     box-shadow: 0 0 21px rgba(0, 0, 0, 0.27);
     box-sizing: border-box;
     box-shadow: 0 0 10px 8px #0a0a0a;
-     width:800px; 
+    width: 80%;
+     /* width:800px;  */
      max-height: 400px; 
      overflow-y: auto;
     
@@ -419,7 +449,7 @@
   }
 
   .recuadros-items{
-    width: 100%;
+    width: 90%;
     font-size: 10px;
     color: #000;
     overflow: hidden;
@@ -482,23 +512,28 @@
   }
 }
 
-  
-.clasifi2,
+
 .clasifi{
-  background-color: white;
+  background-color: rgb(78, 231, 85);
+  margin-top: 60px;
+  width: 80%;
+
+}
+
+.clasifi,
+.clasifi2{
   display: flex;
   justify-content: center;
-  width: 80%;
   color: #000;
   font-weight: 300;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   border: 1px solid #000;
   border-radius: 12px;
-  margin-bottom: 18px;
 }
 .clasifi2{
-  margin-top: 70px;
-
+  margin-top: 40px;
+  background-color: white;
+  width: 60%;
 }
 
 .clasifi2 span,
@@ -506,16 +541,14 @@
   font-size: 25px;
 }
 
-/* From Uiverse.io by dzoshi */ 
 .card-clasi {
-  position: relative;
   background: linear-gradient(-45deg, #161616 0%, #000000 100%);
   color: #81818144;
   padding: 14px;
-  gap: 10px;
+  /* gap: 10px; */
   cursor: pointer;
-  z-index: -0;
-  transform: translateY(60%);
+  width: 40%;
+  border-radius: 15px;
 
 }
 
@@ -526,9 +559,9 @@
 
 .overlap-img {
   position: absolute;
-  transform: translateY(60%);
   z-index: 1; 
-  width: 20%; /* Adjust size as needed */
+  top: 130px;
+  width: 10%; /* Adjust size as needed */
 }
 
 /* From Uiverse.io by SelfMadeSystem */ 
@@ -614,7 +647,6 @@
 
 }
 
-
 .imgSalaCrear {
   background-color: rgb(25, 123, 252);
   border-radius: 50%;
@@ -631,6 +663,9 @@
   box-shadow: 0 0 10px 8px #0a0a0a;
 }
 
+.imgHome-sala4,
+.imgHome-sala3,
+.imgHome-sala2,
 .imgHome-sala{
   background-color: #45e725;
   border-radius: 50%;
@@ -666,6 +701,7 @@
 }
 
 .crearSalaC{
+  padding: 0.5rem;
   border: none;
   box-shadow: 0 0 21px rgba(0, 0, 0, 0.144);
   box-sizing: border-box;
@@ -687,22 +723,43 @@
   outline: none;
 }
 
+.imgPodioLg{
+  width: 80px;
+  height: 70px; 
+  margin-right: 5px
+}
 
 
 
 
-/* ----media query -- */
+/* ----media query ------------------------------------------------------------------------------------------------------------------------------------- */
   
 @media (max-width: 576px) {
-  .Difi {
-      width: 100%;
-      margin-top: 10px;
+  .difi {
+      width: 90%;
+  }
+
+  .categoria{
+    width: 350px !important;
+  }
+
+  .categorias-button{
+    width: 85%;
+    height: 85%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+
+  }
+
+  .logitoCerebro{
+    width: 80%;
+    margin-top: 90px;
   }
 
   .brutalist-button1,
   .brutalist-button2,
   .brutalist-button3 {
-      margin-bottom: 60px;
+      margin-bottom: 50px;
   }
 
   .logito-entrenamiento {
@@ -711,17 +768,26 @@
   }
 
   .cerebroTerm{
-    width: 50%;
-    height: 30%;
+    width: 30%;
+    height: 20%;
+  }
+
+  .cerebroNum{
+    width: 40%;
+    height: 20%;
   }
 
   .terminosCategoria{
     width: 90%;
+    padding: 0;
+    padding-top: 10px;
 
   }
+
   
   .botonesTer-button{
-    margin-bottom: 10px;
+    width: 80%;
+    margin-bottom: 5px;
   }
 
   
@@ -743,11 +809,260 @@
     margin-left: 5px;
   }
 
+
+  .podio{
+    width: 100%;
+    max-height: 600px; 
+  } 
+
+  .letter{
+    font-size: 2.3rem;
+
+  }
+
+   .logito-podio{
+    width: 70%;
+
+  } 
+
+  .logito-podio2{
+    width: 50%;
+    animation: slide-right-left 1.5s infinite ease-in-out alternate;
+  } 
+
+
+  @keyframes slide-right-left {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(40px);
+    }
+  }
+
+
+  
+  .podio1{
+    height:400px;
+  }
+
+  .podio2 {   
+    height: 470px;
+  }
+
+  .podio3 {   
+    height: 400px;
+  } 
+
+  .img-puesto{
+    width: 110px; 
+    height: 110px;
+    margin-top: 54px;
+    animation: slideIn 1s ease-in-out;
+
+  }
+
+  .nombre-Jugador{
+    font-size: 1.5rem;
+  }
+
+  .punText{
+    font-size: 1.2rem;
+  }
+ 
+
+
+  .textOcul1{
+    display: none;
+  }
+
+  .cuadroSala{
+  border-radius: 20px;
+  width: 400px;
+  height: 50px;
+
+}
+
+.crearSalaC{
+  width:92%; 
+}
+
+.imgHome-sala{
+  right: 80%;
+  bottom: 82%;
+  width: 80px;
+  height: 70px;
+}
+
+.imgSalaCrear{
+  width: 80px;
+  height: 70px;
+}
+
+.imgHome-sala2{
+  right: 85%;
+  bottom: 82%;
+  width: 70px;
+  height: 60px;
+}
+
+.imgHome-sala4{
+  right: 85%;
+  bottom: 82%;
+  width: 70px;
+  height: 60px;
+}
+
+.imgHome-sala3{
+  right: 85%;
+  bottom: 90%;
+  width: 70px;
+  height: 60px;
+}
+
+.containerTer2{
+  display: block;
+}
+
+.containerTer1{
+  display: none;
+}
+
+.paralelogramoTer {
+  width: 250px !important;
+  height: 8%; 
+  top: -26px;
+
+}
+
+.paralelogramoNum {
+  width: 250px !important;
+  height: 12%; 
+  top: -26px;
+
+}
+
+.cerebro-leyendo{
+  width: 60%;
+  margin-top: 20px;
+
+}
+
+.tutorial{
+  margin-top: 20px;
+  width: 100%;
 }
 
 
+
+.tuto-text{
+  font-size: 20px;
+}
+
+.tuto-text2{
+  font-size: 17px;
+}
+
+.btnTuto{
+  margin-left: 50%;
+}
+.btnTuto2{
+  margin-left: 50%;
+}
+
+
+.demostracion-bloque{
+  padding: 10px;
+}
+
+
+.Numeros{
+
+display: none;
+}
+
+.secuenciaTer{
+  width: 94%;
+  margin-top: 20px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+.glitch{
+  display: none;
+}
+
+.clock-container{
+  width: 150px;
+  height: 120px;
+  margin-top: 60px;
+}
+
+.clock-circle {
+  top: -30px; 
+  width: 150px;
+  height: 90px;
+}
+
+.digital-clock {
+  font-size: 1.5rem;
+  border-radius: 10px;
+  margin-top: 50px;
+  padding: 3px 20px;
+}
+
+
+.secuenciaTer2{
+  width: 97%;
+  margin-top: 20px;
+
+}
+
+.clock-container2{
+  width: 160px;
+  height: 90px;
+  margin-top: 50px;
+}
+
+.clock-circle2 {
+  top: -40px; 
+  width: 160px;
+  height: 90px;
+}
+
+.digital-clock2{
+  margin-top: 40px;
+}
+
+
+.card-clasi {
+  width: 90%;
+
+}
+
+.overlap-img{
+  width: 30%;
+  top: 23%;
+}
+
+.clasifi2{
+  width: 80%;
+}
+
+.clasifi{
+  padding-right: 20px;
+}
+
+.regresar{
+  width: 60%;
+}
+
+}
+
+
+
 @media (min-width: 577px) and (max-width: 768px) {
-  
+  .cerebroNum,
   .cerebroTerm{
     width: 30%;
     height: 30%;
@@ -761,26 +1076,385 @@
     margin-bottom: 10px;
   }
 
+
   
 }
 
 
-@media (min-width: 577px) and (max-width: 768px) {
+@media (min-width: 577px){
   
+.textOcul2{
+  display: none;
+}
+
+  
+}
+
+/* iphone de jesus  */
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+
+  .logito-podio{
+    width: 50%;
+    height: auto;
+  }
+
+  .podio{
+    width: 100%;
+    max-height: 320px;
+  }
+
+  .letter{
+    font-size: 2rem;
+
+  }
+
+  .imgPodioLg{
+    width: 70px;
+    height: 60px; 
+  }
+
+  
+  .logito-podio2{
+    width: 50%;
+    animation: slide-right-left 1.5s infinite ease-in-out alternate;
+  } 
+
+  .podio1{
+    height:250px;
+  }
+
+  .podio2 {   
+    height: 300px;
+  }
+
+  .podio3 {   
+    height: 250px;
+  } 
+
+  .img-puesto{
+    width: 90px; 
+    height: 90px;
+    margin-top: 24px;
+    animation: slideIn 1s ease-in-out;
+
+  }
+
+  .nombre-Jugador{
+    margin-top: 20px;
+    font-size: 1.5rem;
+  }
+
+
+  .punText{
+    font-size: 1.2rem;
+  }
+
+  .cuadroSala{
+    border-radius: 20px;
+    width: 300px;
+    height: 50px;
+  
+  }
+
+  .crearSalaC{
+    width:92%; 
+  }
+
+  
+.imgHome-sala{
+  right: 80%;
+  bottom: 82%;
+  width: 80px;
+  height: 70px;
+}
+
+.imgSalaCrear{
+  width: 74px;
+  height: 70px;
+  left: 85%;
+}
+
+.imgHome-sala2{
+  right: 85%;
+  bottom: 82%;
+  width: 60px;
+  height: 60px;
+}
+
+.imgHome-sala3{
+  right: 85%;
+  bottom: 84%;
+  width: 60px;
+  height: 60px;
+}
+
+  .title-prueba{
+    width: 100%;
+    display: none;
+  }
+
+  
+.crearSalaC{
+  width:90%; 
+  padding: 0rem;
+ 
+
+}
+
+.btnCrSala{
+ 
+  font-size: 20px;
+  width: 90%;
+  height: 45px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+ 
+}
+
+.btnCrSala2{
+  font-size: 20px;
+  width: 90%;
+  height: 35px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.clsSep{
+  margin-top: 0rem;
+}
+
+.btnCrSala3{
+  font-size: 18px;
+  width: 90%;
+  height: 30px;
+  margin-bottom: 6px;
+ 
+}
+
+.imgHome-sala4{
+  right: 85%;
+  bottom: 60%;
+  width: 60px;
+  height: 60px;
+}
+
+.logito-entrenamiento {
+  width: 60%;
+  max-height: 300px;
+}
+
+.configuraciones{
+  width: 80px;
+  margin-top: 5px;
+}
+
+.icono-home{
+  width: 60px;
+}
+
+.difi{
+  width: 90%;
+}
+
+
+.brutalist-button1,
+.brutalist-button2,
+.brutalist-button3 {
+  width: 80%;
+  height: 50px;
+  margin-bottom: 5px;
+  margin-top: 10px;
+}
+
+
+.categoria{
+  width: 300px !important;
+  height: 180px !important;
+}
+
+.categorias-button{
+  width: 85%;
+  height: 55%;
+  margin-top: 0px;
+  margin-bottom: 40px;
+
+}
+
+.logitoCerebro{
+  width: 70%;
+  margin-top: 50px;
+}
+
+
+.paralelogramo{
+  height: 40px ;
+  width: 250px !important;
+  top: -30px;
+}
+
+.paralelogramoNum,
+.paralelogramoTer{
+height: 30px;
+width: 200px !important;
+}
+
+.cerebroNum,
+.cerebroTerm{
+  width: 35%;
+  height: 20%;
+}
+.terminosCategoria{
+max-height: 220px;
+overflow-y: auto;
+}
+
+.cerebro-leyendo{
+  display: none;
+}
+
+.recuadro{
+  height: 30px;
+}
+
+
+.btnTuto2{
+  padding: 0;
+  margin: 0;
+}
+
+
+.secuenciaTer{
+  width: 94%;
+  margin-top: 30px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.clock-circle{
+  display: none;
+}
+
+.clock-container{
+  height: 80px;
+  margin-top: 20px;
+}
+
+
+.digital-clock {
+  margin-top: 0px;
+}
+
+
+
+.secuenciaTer2{
+  margin-top: 20px;
+  max-height: 270px;
+}
+
+.clock-container2{
+  width: 160px;
+  height:50px;
+  margin-top: 10px;
+}
+
+.clock-circle2 {
+  display: none;
+}
+
+.digital-clock2{
+  margin-top: 0px;
+}
+
+
+
+.card-clasi {
+  width: 90%;
+
+}
+
+.overlap-img{
+  width: 30%;
+  top: 5%;
+}
+
+.clasifi2{
+  width: 80%;
+  margin-top: 20px;
+}
+
+.clasifi{
+  padding-right: 20px;
+  margin-top: 30px;
+}
+
+.regresar{
+  width: 60%;
+}
+
+}
+
+@media (min-width: 321px) and (max-width: 578px) and (max-height: 900px){
+  
+  .logito-podio {
+    width: 60%;
+    height: auto;
+  }
+
+  .podio {
+    width: 100%;
+    max-height: 450px;
+  }
+
+  .letter {
+    font-size: 2rem;
+  }
+}
+
+
+
+@media (min-width: 800px) and (max-width: 840px) and (min-height: 1000px) and (max-height: 1300px) {
+  .cerebroNum,
   .cerebroTerm{
     width: 30%;
-    height: 30%;
   }
 
-  .terminosCategoria{
-    width: 80%;
-  }
+
+  .cerebro-leyendo{
+    width: 70%;
   
-  .botonesTer-button{
-    margin-bottom: 10px;
   }
 
   
+.secuenciaTer{
+  width: 98%;
+  max-height: 800px;
 }
 
 
+.card-clasi {
+  width: 90%;
+
+}
+
+.overlap-img{
+  width: 30%;
+  top: 27%;
+}
+
+.clasifi2{
+  width: 80%;
+  margin-top: 20px;
+}
+
+.clasifi{
+  padding-right: 20px;
+  margin-top: 30px;
+}
+
+.regresar{
+  width: 60%;
+}
+
+
+
+}
