--- a/NEURODASH/assets/css/utilities/text.css
+++ b/NEURODASH/assets/css/utilities/text.css
@@ -80,63 +80,13 @@
   }
   
   .letter{
-    display: inline-block;
     font-weight: 900;
     font-size: 2em;
-    /* margin: 0.2em; */
-    position: relative;
-    color: #ffffff;
-    transform-style: preserve-3d;
-    perspective: 400;
-    z-index: 1;
+    color: #000000;
+   
   }
 
-  .letter:before, .letter:after{
-    position:absolute;
-    content: attr(data-letter);
-    transform-origin: top left;
-    top:0;
-    left:0;
-  }
-  .letter, .letter:before, .letter:after{
-    transition: all 0.3s ease-in-out;
-  }
-  .letter:before{
-    color: #000000;
-    text-shadow: 
-      -1px 0px 1px rgba(255,255,255,.8),
-      1px 0px 1px rgba(0,0,0,.8);
-    z-index: 3;
-    transform:
-      rotateX(0deg)
-      rotateY(-15deg)
-      rotateZ(0deg);
-  }
-  .letter:after{
-    color: rgba(0,0,0,.11);
-    z-index:2;
-    transform:
-      scale(1.08,1)
-      rotateX(0deg)
-      rotateY(0deg)
-      rotateZ(0deg)
-      skew(0deg,1deg);
-  }
-  .letter:hover:before{
-    color: #000000;
-    transform:
-      rotateX(0deg)
-      rotateY(-40deg)
-      rotateZ(0deg);
-  }
-  .letter:hover:after{
-    transform:
-      scale(1.08,1)
-      rotateX(0deg)
-      rotateY(40deg)
-      rotateZ(0deg)
-      skew(0deg,22deg);
-  }
+ 
 
   .tuto-text{
     color: rgb(9, 245, 28);
@@ -197,7 +147,19 @@
 
 .nombre-Jugador{
   flex-grow: 1; 
-  display: flex; 
+  display: block; /* Cambiar a block para el truncamiento */
   justify-content: center; 
   align-items: center;
+  font-size: 1.5rem;
+  width: 100%; 
+  white-space: nowrap;
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  text-align: center; 
+  margin-top: 60px;
+}
+
+
+.punText{
+  font-size: 1.2rem;
 }
