--- a/NEURODASH/views/entrenamiento/clasIficacion-entrenamiento.html
+++ b/NEURODASH/views/entrenamiento/clasIficacion-entrenamiento.html
@@ -9,50 +9,51 @@
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="backgound-cuatro">
+<body class="backgound-cuatro d-flex justify-content-center align-items-center">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-12 d-flex justify-content-center align-items-center position-relative">
-            <img src="../../assets/img/iconos-desarrollo/elefantePensado 1.png" alt="logo" class="logito-entrenamiento2 overlap-img">
-        </div>
-      </div>
-      <div class="row">
         <div class="col-12 d-flex justify-content-center align-items-center">
-          <div class="card-clasi max-w-100 p-2" style=" border-radius: 15px; width:30%;">
-            <div class="row">
-              <div class="col-12 d-flex justify-content-center">
-                  <div class="clasifi2">
-                    <span>Aciertos: 0 </span>
-                  </div>
+          <div class="card-clasi p-2">
+
+
+            <div class="col-12 d-flex justify-content-end align-items-center">
+              <img src="../../assets/img/iconos-desarrollo/elefantePensado 1.png" alt="logo" class="logito-entrenamiento2 overlap-img">
+            </div>
+
+            <div class="col-12 d-flex justify-content-center align-items-center">
+              <div class="clasifi">
+                <span>Resultados</span>
               </div>
             </div>
-            <div class="row">
-              <div class="col-12 d-flex justify-content-center">
-                  <div class="clasifi">
-                    <span>Errores: 0</span>
-                  </div>
+
+            <div class="col-12 d-flex justify-content-center align-items-center">
+              <div class="clasifi2">
+                <span>Aciertos: 0</span>
               </div>
             </div>
-            <div class="row">
-              <div class="col-12 d-flex justify-content-center">
-                  <div class="clasifi">
-                    <span>Bonus de tiempo: 2</span>
-                  </div>
+
+            <div class="col-12 d-flex justify-content-center align-items-center">
+              <div class="clasifi2">
+                <span>Fallos: 0 </span>
               </div>
             </div>
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center align-items-center position-relative">
-                  <a href="../home.html" class="regresar">Regresar</a>                                      
-                </div>
+
+            <div class="col-12 d-flex justify-content-center align-items-center">
+              <div class="clasifi2">
+                <span>Bonus de tiempo: 0 </span>
               </div>
             </div>
+
+            <div class="col-12 d-flex justify-content-center align-items-center p-3">
+              <a href="../home.html" class="regresar">Regresar</a>                                      
+            </div>
+
           </div>
         </div>
-      </div> 
+      </div>
 
+      
     </div>
-
-
     
     <script src="../../lib/bootstrap/js/bootstrap.js"></script> 
 </body>
