--- a/NEURODASH/views/entrenamiento/tematicaEntrenamiento.html
+++ b/NEURODASH/views/entrenamiento/tematicaEntrenamiento.html
@@ -10,62 +10,36 @@
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
     <script src="../../controller/entrenamiento/modoJuego.js"></script>
 </head>
-<body class="backgound-uno">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-        <div class="row">
-          <div class="col-1">
-            <div class="col-12 d-flex justify-content-start">
-              <button class="btn-devolver">
-                <a href="entrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
-              </button>
-            </div>
-          </div>
-          <div class="col-lg-11 d-flex flex-column justify-content-center align-items-center"  style="height: 100vh;">
-            <div class="temario">
-              <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                  <img src="../../assets/img/iconos/elefante-entrenamiento.png" alt="logo" class="logitoCerebro">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-12 d-flex justify-content-center position-relative">
-                  <div class="paralelogramo"><h5 class="titulo-tematica">TEMÁTICA DEL JUEGO</h5>
-                </div>
-                <div class="card categoria" style="width: 430px; background-color: #7878eeb6; border-radius: 15px;">
-                  <!-- <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
-                      <a class="categorias-button" href="terminosEntrenamiento.html">
-                        <div class="icono-btnTerminos">
-                          <div class="icono-btnTerminos-square"><img src="../assets/img/iconos/terminos-icon.png" alt="Icono Términos" class="ter-icon"></div>
-                        </div>
-                        <div class="btn-categoriaText">
-                          <span>TÉRMINOS</span>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
-                      <a class="categorias-button" href="numerosEntrenamiento.html">
-                        <div class="icono-btnTerminos">
-                          <div class="icono-btnTerminos-square"><img src="../assets/img/iconos/numeros-ico.png" alt="Icono Términos" class="ter-icon"></div>
-                        </div>
-                        <div class="btn-categoriaText">
-                          <span>NÚMEROS</span>
-                        </div>
-                      </a>
-                    </div>
-                  </div>                                     -->
-                </div>
-              </div> 
-            </div>
-          </div>                                                
-        </div>                                
+<body class="backgound-uno d-flex justify-content-center align-items-center" style="height: 100vh;">
+
+  <div class="container-fluid justify-content-center" style="height: 100%;">
+    <div class="row mt-5">
+      <div class="col-12 d-flex justify-content-start">
+        <a href="entrenamiento.html">
+          <img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver">
+        </a>
       </div>
     </div>
-  </div>
+
+    <div class="row">
+      <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
+          <img src="../../assets/img/iconos/elefante-entrenamiento.png" alt="logo" class="logitoCerebro">
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center position-relative">
+              <div class="paralelogramo">
+                <h5 class="titulo-tematica textOcul1">TEMÁTICA DEL JUEGO</h5>
+               <h5 class="titulo-tematica textOcul2">TEMÁTICA</h5>
+              </div>
+
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="card categoria" style="width: 430px; background-color: #7878eeb6; border-radius: 15px;"></div>
+            </div>
+          </div> 
+        </div>
+      </div>
+    </div>
+
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
   <script src="../../assets/js/entrenamiento/tematica.js"></script>
 </body>
