--- a/NEURODASH/views/entrenamiento/terminosEntrenamiento.html
+++ b/NEURODASH/views/entrenamiento/terminosEntrenamiento.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
 
 </head>
-<body class="backgound-dos" style="overflow: hidden;">
-  <div class="container-fluid ">
-    <div class="row">
+<body class="backgound-dos" style="height: 100vh;">
+  <div class="container-fluid" style="height: 100%;">
+    <div class="row mt-2">
       <div class="col-12 d-flex justify-content-start align-items-center">
         <a href="tematicaEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
       </div>
@@ -28,7 +28,7 @@
           <div class="col-12 d-flex justify-content-center position-relative ">
             <div class="paralelogramoTer"><h5 class="titulo-tematica">TÉRMINOS</h5></div>
             <div class="card terminosCategoria" style="background-color: #88fa53e0; border-radius: 15px;">
-              <div class="container">
+              <div class="containerTer1">
                 <div class="row">
                   <div class="col-6 d-flex justify-content-center">
                     <a class="botonesTer-button " href="tutorialEntrenamiento.html">
@@ -139,13 +139,154 @@
                     </a> 
                   </div>
                 </div>
-              </div>                                                                                                                                              
+              </div>
+              <div class="containerTer2">
+                <div id="pagee1" style="width: 100%;">
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button " href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/medicina.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>MEDICINA</span>
+                        </div>
+                      </a>  
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/paises.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>PAISES</span>
+                        </div>
+                      </a> 
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/planetas.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>PLANETAS</span>
+                        </div>
+                      </a>  
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/colores.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>COLORES</span>
+                        </div>
+                      </a> 
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/animales.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>ANIMALES</span>
+                        </div>
+                      </a>  
+                    </div>
+                  </div>
+                </div>
+
+                <div id="pagee2" style="width: 100%;">
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/idiomas.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>IDIOMAS</span>
+                        </div>
+                      </a> 
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/tecnologias.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>TECNOLOGIA</span>
+                        </div>
+                      </a>  
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/elementosquimicos.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>ELEMENTOS QUIMICOS</span>
+                        </div>
+                      </a> 
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/alimentos.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>ALIMENTOS</span>
+                        </div>
+                      </a>  
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 d-flex justify-content-center">
+                      <a class="botonesTer-button" href="tutorialEntrenamiento.html">
+                        <div class="icono-btnTerminos">
+                          <div class="icono-btnTerminos-square"><img src="../../assets/img/iconos/icon-terminos/partesCuerpo.png" alt="Icono Términos" class="ter-icon"></div>
+                        </div>
+                        <div class="btn-categoriaText">
+                          <span>CUERPO HUMANO</span>
+                        </div>
+                      </a> 
+                    </div>
+                  </div>
+                </div>
+
+                <nav aria-label="Page navigation">
+                  <ul class="pagination justify-content-center clsSep">
+                      <li class="page-item">
+                          <a class="page-link" href="#" onclick="showPage2(1)">1</a>
+                      </li>
+                      <li class="page-item">
+                          <a class="page-link" href="#" onclick="showPage2(2)">2</a>
+                      </li>
+                  </ul>
+                </nav>
+              </div>
             </div>
-        </div>   
+          </div>   
         </div>
     </div>
   </div>  
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
+  <script src="../../assets/js/entrenamiento/num.js"></script>
+
 </body>
 </body>
 </html>
