--- a/NEURODASH/views/entrenamiento/tutorialEntrenamiento.html
+++ b/NEURODASH/views/entrenamiento/tutorialEntrenamiento.html
@@ -9,114 +9,120 @@
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
 </head>
-<body class="backgound-dos">
-  <div class="container-fluid seccion active" id="tuto1">
-    <div class="row">
-      <div class="col-12">
-        <div class="row">
-          <div class="col-1">
-            <div class="col-12 d-flex justify-content-start">
-              <button class="btn-devolver">
-                <a href="tematicaEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
-              </button>
-            </div>
-          </div>
-          <div class="col-2 d-flex align-items-end">
-            <div class="col-12 d-flex justify-content-center">
-                <button onclick= "showSection('tuto2')" class="buttonNext">
-                    NEXT
-                </button>
-            </div>
-          </div>
-          <div class="col-6 d-flex align-items-center" style="height: 100vh;">
-              <div class="col-12 d-flex justify-content-center">
-                  <div class="card tutorial" style="width: 600px;  background-color: #032738; border-radius: 15px;">
-                      <div class="container">
-                          <div class="row">
-                              <div class="col-1 d-flex justify-content-center">
-                                  <div class="linea"></div>
-                              </div>
-                              <div class="col-11">
-                                <h5 class="tuto-text">MECÁNICA DEL JUEGO</h5>
-                                <p class="tuto-text2">
-                                    En tu pantalla vas a observar una secuencia  por 8 segundos y tendrás que memorizarla antes de que esta desaparezca. 
-                                </p>                                            
-                              </div>
-                          </div>                                                                                                   
-                      </div>
-                  </div>
-              </div>
-          </div>                    
-          <div class="col-3 ">
-            <div class="col-12 d-flex justify-content-center">
-              <img src="../../assets/img/iconos-desarrollo/neuroLeyendo 1.png" alt="boton home" class="cerebro-leyendo">
-            </div>
-          </div>
-        </div>            
+<body class="backgound-dos" style="height: 100vh;">
+  <div class="container-fluid seccion active" id="tuto1" style="height: 100%;">
+    <div class="row mt-2">
+      <div class="col-12 d-flex justify-content-start align-items-center">
+        <a href="tematicaEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
       </div>
-    </div>        
+    </div>
+
+
+    <div class="row">
+      <div class="col-lg-9 col-12 d-flex align-items-center justify-content-center">
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center align-items-center">
+            <div class="tutorial">
+              <div class="container">
+                <div class="row">
+                  <div class="col-1 d-flex justify-content-center">
+                      <div class="linea"></div>
+                  </div>
+                  <div class="col-11">
+                    <h5 class="tuto-text">MECÁNICA DEL JUEGO</h5>
+                    <p class="tuto-text2">
+                        En tu pantalla vas a observar una secuencia  por 8 segundos y tendrás que memorizarla antes de que esta desaparezca. 
+                    </p>  
+                  </div>
+                </div>                                                                                                      
+              </div>
+            </div>
+          </div>
+          <div class="col-12 d-flex justify-content-center align-items-end">
+            <button onclick= "showSection('tuto2')" class="btnTuto" style="background-color: rgb(11, 216, 96); margin-top: 20px;">
+              NEXT
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-12 justify-content-center align-items-center">
+        <div class="col-12 d-flex justify-content-center">
+          <img src="../../assets/img/iconos-desarrollo/neuroLeyendo 1.png" alt="boton home" class="cerebro-leyendo">
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="container-fluid seccion" id="tuto2">
-    <div class="row">
-        <div class="col-12">
-            <div class="row">
-                <div class="col-1">
-                  <div class="col-12 d-flex justify-content-start">
-                    <button class="btn-devolver">
-                        <a href="tutorialEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
-                    </button>
-                  </div>
-                </div>
 
-                <div class="col-2 d-flex align-items-end">
-                    <div class="col-12 d-flex justify-content-center">
-                      <a href="ronda1-entrenamiento.html" class="buttonNext">
-                          NEXT
-                      </a>        
-                    </div>
-                </div>
 
-                <div class="col-6 d-flex align-items-center"  style="height: 100vh;">
-                  <div class="cuadricula-gl">
-                    <div class="tutorial"  style="width: 600px;  background-color: #032738; border-radius: 15px;">
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-1">
-                              <div class="linea"></div>
-                          </div>
-                          <div class="col-11">
-                              <h5 class="tuto-text">MECÁNICA DEL JUEGO</h5>
-                              <p class="tuto-text2">
-                                  Luego debes arrastrar los elementos  ordenanandolos como la secuencia que se mostró. 
-                              </p>                                            
-                          </div>
-                        </div>                                                                                                   
-                      </div>
-                    </div>
-                    <div class="demostracion-bloque d-flex align-items-center">
-                      <div class="col-12">
-                        <div class="row">
-                          <div class="col-4 recuadro deslizar">CAMILA</div>
-                          <div class="col-4 d-flex align-items-center">
-                              <div class="flecha"></div>
-                          </div>
-                          <div class="col-4 recuadro"></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                
-                <div class="col-3">
-                  <div class="col-12 d-flex justify-content-center">
-                    <img src="../../assets/img/iconos-desarrollo/elefantePensado 1.png" alt="boton home" class="cerebro-leyendo">
-                  </div>
-                </div>                
-            </div>            
+    <div class="container-fluid seccion" id="tuto2">
+
+      <div class="row mt-2">
+        <div class="col-12 d-flex justify-content-start">
+          <a href="tutorialEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
         </div>
-    </div>        
-</div>  
+      </div>
+
+
+      <div class="row">
+        <div class="col-lg-6 col-12 d-flex align-items-center justify-content-center">
+          <div class="cuadricula-gl d-flex justify-content-center flex-column">
+            <div class="tutorial">
+              <div class="container">
+                <div class="row">
+                  <div class="col-1">
+                      <div class="linea"></div>
+                  </div>
+                  <div class="col-11">
+                      <h5 class="tuto-text">MECÁNICA DEL JUEGO</h5>
+                      <p class="tuto-text2">
+                          Luego debes arrastrar los elementos  ordenanandolos como la secuencia que se mostró. 
+                      </p>                                            
+                  </div>
+                </div>                                                                                                   
+              </div>
+            </div>
+            <div class="demostracion-bloque d-flex align-items-center">
+              <div class="col-12">
+                <div class="row">
+                  <div class="col-4 recuadro deslizar">CAMILA</div>
+                  <div class="col-4 d-flex align-items-center">
+                      <div class="flecha"></div>
+                  </div>
+                  <div class="col-4 recuadro"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-12">
+          <div class="col-12 d-flex justify-content-center">
+            <img src="../../assets/img/iconos-desarrollo/elefantePensado 1.png" alt="boton home" class="cerebro-leyendo">
+          </div>
+        </div>  
+
+        <div class="col-lg-3 col-12 d-flex align-items-end">
+          <div class="col-12 d-flex justify-content-center">
+            <a href="ronda1-entrenamiento.html" class="btnTuto2" style="background-color: rgb(11, 216, 96); width: 50%;">
+                NEXT
+            </a>        
+          </div>
+        </div>
+
+        
+
+
+
+      </div>
+    </div>
+
+    
+
+                
+
+                              
 <script src="../../assets/js/entrenamiento/animacionTutoriales.js"></script>
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
 </body>
