--- a/NEURODASH/views/juego/podioFinal.html
+++ b/NEURODASH/views/juego/podioFinal.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEURODASH</title>
-    <link rel="icon" href="../assets/img/iconos-principales/rayo_nuzit.icon">
+    <link rel="icon" href="../../assets/img/iconos-principales/rayo_nuzit.icon">
 
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
 </head>
 <body class="backgound-uno d-flex align-items-center">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
-                <img src="../assets/img/iconos-desarrollo/Ellipse 55.png" alt="logo" class="logito-podio2">
+                <img src="../../assets/img/iconos-desarrollo/Ellipse 55.png" alt="logo" class="logito-podio2">
             </div>
         </div>
         <div class="row">
@@ -21,10 +21,10 @@
                 <div class="col-4 d-flex justify-content-end align-items-end">
                     <div class="podio1 m-0 d-flex flex-column justify-content-between">
                         <div class="d-flex justify-content-center">
-                            <img src="../assets/img/iconos-principales/ganador2.png" alt="Imagen de Mark" class="img-puesto">
+                            <img src="../../assets/img/iconos-principales/ganador2.png" alt="Imagen de Mark" class="img-puesto">
                         </div>
                         <h1 class="text-center nombre-Jugador">Nombre</h1>
-                        <h1 class="text-center">Puntuación</h1>  
+                        <h1 class="text-center punText">Puntuación</h1>  
                                     
                     </div>
                 </div>
@@ -32,10 +32,10 @@
                 <div class="col-4 d-flex justify-content-start align-items-end">
                     <div class="podio2 m-0 d-flex flex-column justify-content-between">
                         <div class="d-flex justify-content-center">
-                            <img src="../assets/img/iconos-principales/ganador1.png" alt="Imagen de Mark" class="img-puesto">
+                            <img src="../../assets/img/iconos-principales/ganador1.png" alt="Imagen de Mark" class="img-puesto">
                         </div>
                         <h1 class="text-center nombre-Jugador">Nombre</h1>
-                        <h1 class="text-center">Puntuación</h1>
+                        <h1 class="text-center punText">Puntuación</h1>
                         
                     </div>
                 </div>
@@ -43,10 +43,10 @@
                 <div class="col-4 d-flex justify-content-end align-items-end">
                     <div class="podio3 m-0 d-flex flex-column justify-content-between">
                         <div class="d-flex justify-content-center">
-                            <img src="../assets/img/iconos-principales/ganador3.png" alt="Imagen de Mark" class="img-puesto">
+                            <img src="../../assets/img/iconos-principales/ganador3.png" alt="Imagen de Mark" class="img-puesto">
                         </div>
                         <h1 class="text-center nombre-Jugador">Nombre</h1>
-                        <h1 class="text-center">Puntuación</h1>  
+                        <h1 class="text-center punText">Puntuación</h1>  
                             
                     </div>
                 </div>  
@@ -58,6 +58,6 @@
 
 
 
-    <script src="../lib/bootstrap/js/bootstrap.js"></script> 
+    <script src="../../lib/bootstrap/js/bootstrap.js"></script> 
 </body>
 </html>
