--- a/NEURODASH/assets/css/base/typography.css
+++ b/NEURODASH/assets/css/base/typography.css
@@ -28,3 +28,10 @@
     src: url('../../font/Pixeboy.ttf');
 }
 
+@font-face {
+    font-family: 'Langdon';
+    src: url('../../font/langdon.regular.otf');
+}
+
+
+
