--- a/NEURODASH/views/forms/login.html
+++ b/NEURODASH/views/forms/login.html
@@ -3,66 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NUZIT - LOGIN</title>
+    <title>Login</title>
+    <link rel="icon" href="../../assets/img/iconos-principales/rayo.icon">
+    <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
+    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
 
-    <link rel="icon" href="../../assets/img/iconos-principales/rayo_nuzit.icon">
+    <link rel="stylesheet" href="../../assets/css/pages/login.css">
 
-    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="../assets/css/login.css"> -->
-    <link rel="stylesheet" href="../../assets/css/main.css">
+    <!-- <link rel="stylesheet" href="../../assets/css/main.css"> -->
 </head>
 <body class="backgound-start-back">
-    <div class="container aling-item-centerN min-vh-100">
-        <div class="row border rounded-5 p-3 fondo-login shadow box-area">
-            <div class="col-md-6 rounded-4 aling-item-centerN flex-column left-box" >
-                <div class="featured-image mb-3">
-                    <img src="../../assets/img/iconos/neurodash.png" class="img-fluid img-login">
+    <!-- <div class="container">
+
+    </div> -->
+    <div class="container-forms">
+        <div class="signin-signup">
+            <!-- formulario de acceso -->
+            <form action="" class="sign-in-form">
+                <h2 class="title-forms">INICIAR SESIÓN</h2>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="email" placeholder="Email user"  required>
                 </div>
-                    <p class="text-white fs-4 texto text-wrap text-center" >¡Encuentra, recuerda, y conquista!</p>  
-            </div> 
-            <div class="col-md-6 right-box">
-                <div class="row align-items-center">
-                    <form action="">
-                        <div class="header-text mb-4">
-                            <h2 class="text-white">Sign in</h2>
-                        </div>
-
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control form_style rounded-3 form-control-lg bg-light fs-6" placeholder="Email">
-                        </div>
-
-                        <div class="input-group mb-3">
-                            <input type="password" class="form-control form_style rounded-3 form-control-lg bg-light fs-6" placeholder="Password">
-                        </div>
-
-                        <div class="input-group mb-4 d-flex justify-content-between">
-                            <!-- <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="formCheck">
-                                <label for="formCheck" class="form-check-label text-secondary"><small>Remember Me</small></label>
-                            </div> -->
-
-                            <div class="forgot">
-                                <small><a href="#">Forgot Password?</a></small>
-                            </div> 
-                        </div>
-
-                        <div class="mb-3">
-                            <a class="btn btn-form btn-lg btn-primary w-100 fs-6" href="../home.html">Login</a>
-                        </div>
-<!-- 
-                        <div class="mb-3">
-                            <button class="btn btn-form btn-lg btn-light w-100 fs-6"><img src="../assets/img/iconos-desarrollo/Google.png" class="me-2 img-google"><small>Sign In with Google</small></button>
-                        </div> -->
-
-                        <div class="row">
-                            <small class="text-white">Don't have account? <a href="register.html">Sign Up</a></small>
-                        </div>
-                    </form>
+                <div class="input-field">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" placeholder="Password" required>
                 </div>
-            </div> 
+                <!-- <input type="submit" value="login" class="btn"> -->
+                <input type="submit" class="comic-button" value="Ingresar">
+                <p class="account-text"> Don't have an account? <a href="#" id="sign-up-btn2">Sign up</a></p>
+            </form>
+
+            <!-- formulario de registro -->
+            <form action="" class="sign-up-form">
+                <h2 class="title-forms">Registrarse</h2>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="text" placeholder="User name">
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" placeholder="User Email">
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" placeholder="Password">
+                </div>
+                <!-- <input type="submit" value="Sing up" class="btn"> -->
+                <input type="submit" class="comic-button" value="Registrarse">
+                <p class="account-text">Already have an account? <a href="#" id="sign-in-btn2">Sign in</a></p>
+            </form>
+        </div>
+        <div class="panels-container">
+            <div class="panel left-panel">
+                <img src="../../assets/img/iconos-desarrollo/neuroLeyendo 1.png" alt="" class="image-description">
+                <div class="content">
+                    <h3>¿Ya tienes cuenta?</h3>
+                    <p>Inicia sesión en NeuroDash y continúa tu aventura.</p>
+                    <button class="btn" id="sign-in-btn">Registrarse</button>
+                </div>
+            </div>
+            <div class="panel right-panel">
+                <img src="../../assets/img/iconos/neurodash.png" alt="" class="image-description">
+                <div class="content">
+                    <h3>¿No tienes cuenta?</h3>
+                    <p>Regístrate en NeuroDash y empieza a jugar ahora.</p>
+                    <button class="btn" id="sign-up-btn">Iniciar sesión</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/js/main.js"></script>
 </body>
 </html>
