arreglo-login-css

--- a/NEURODASH/assets/css/main.css
+++ b/NEURODASH/assets/css/main.css
@@ -32,12 +32,12 @@
 
 
 /* ************************* pages ************************* */
-@import url('pages/login.css');
+/* @import url('pages/login.css'); */
 @import url('pages/entrenamiento.css');
 @import url('pages/salaEspera.css');
 @import url('pages/invitado.css');
 @import url('pages/configuraciones.css');
-/* @import url('pages/home.css'); */
+@import url('pages/home.css');
 /* ************************* theme ************************* */
 
 @import url('theme/background.css');
